--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Octopussies - The Amsterdam based improv crew you can't get enough of.</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 
 <body>
     <div id='header'>
-        &nbsp;
+        <span id='page'>100</span>
+        <span id='date'>&nbsp;</span>
     </div>
     <div id='main'>
-        <h1>Octopussies</h1>
-        <h2>Website coming soon</h2>
+        <h1>OCTOPUSSIES</h1>
+        <h2>The Amsterdam based improv crew you can't get enough of</h2>
 
         <div class='listleft'>
-            Consectetur adipisicing elit
+            Incredible puns
         </div>
         <div class='listright'>
             300
         </div>
         <div class='listleft'>
-            Sed do eiusmod tempor
+            Anthropomorphic scenes
         </div>
         <div class='listright'>
             301
         </div>
         <div class='listleft'>
-            Incididunt ut labore et dolore
+            PG-18 musical improv
         </div>
         <div class='listright'>
             302
         </div>
         <div class='listleft'>
-            Magna aliqua
+            Check us out on Instagram
         </div>
         <div class='listright'>
             303
@@ -47,34 +49,31 @@
 
         <hr>
 
-        <h3>Lorem ipsum dolor sit amet</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla gravida pulvinar. Ut scelerisque,
-            tortor eget tempus maximus, eros enim mattis nibh, non elementum ligula turpis sollicitudin odio. Morbi
-            imperdiet lacinia dolor in vulputate. Nullam vel viverra arcu. Suspendisse a nibh eu ex semper condimentum a
-            eget orci. Integer nec ipsum sollicitudin, imperdiet magna eu, eleifend magna. Nulla et lobortis tellus.</p>
+        <h3>Nothing is beyond our reach</h3>
+        <p>Once upon a time there was a group of improvisers that consistently blew the mind of their audiences.
+            Throughout the Amsterdam improv scene, they were known as the Octopussies. Those who watched their shows were
+            imbued with a sense of magic and wonder; a newfound understanding of comedy and the reality that we live in every day;
+            a sense of peace and oneness with the universe and all of its creations. Who knew that improv comedy could have such profound
+            implications? Who knew that hairbrush puns could be so funny?
 
-        <p>Donec facilisis augue et orci congue maximus. Ut accumsan erat eget dictum lacinia. Duis eu purus et arcu
-            aliquet cursus a vel nisi. Sed et neque ut sem consequat egestas. Phasellus faucibus nunc sagittis tortor
-            venenatis, eu volutpat ipsum iaculis. Vivamus eleifend commodo nibh eu accumsan. Integer a elit mattis,
-            varius lorem eget, bibendum nisi. In vitae libero blandit, ultricies erat vel, consectetur orci. Praesent
-            nec leo ut nulla luctus scelerisque ac nec libero. Nunc mollis dapibus lacus a finibus. Curabitur cursus
-            libero vel dui volutpat ornare. Aenean dignissim pulvinar aliquet. Curabitur cursus eros nibh, eu ornare
-            lacus aliquam quis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+        <p>If you have been unfortunate enough not to witness this magic firsthand, fear not. The Octopussies shall
+            one day return to their rightful home: the stage. It is there thay they belong, and it is there that they
+            shall blow your minds. We shall conquer the stage once again and remind the audience that nothing is beyond our reach.
         </p>
     </div>
     <div id='footer'>
-        <div id='red'>
-            Lorem
-        </div>
-        <div id='green'>
-            Ipsum
-        </div>
-        <div id='yellow'>
-            Dolor
-        </div>
-        <div id='blue'>
-            Sit amet
-        </div>
+        <a href='#' id='red'>
+            300
+        </a>
+        <a href='#' id='green'>
+            301
+        </a>
+        <a href='#' id='yellow'>
+            302
+        </a>
+        <a href='https://www.instagram.com/lawrensonandgemoli/' target='_blank' id='blue'>
+            303
+        </a>
     </div>
 </body>
 
