Fix instagram link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href='#' id='yellow'>
             302
         </a>
-        <a href='https://www.instagram.com/lawrensonandgemoli/' target='_blank' id='blue'>
+        <a href='https://www.instagram.com/the_real_octopussies/' target='_blank' id='blue'>
             303
         </a>
     </div>
